--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
 		</table>
 	</div>
 
+	<form id="add-row">
+		<button>Add Row</button>
+	</form>
+
 	<script src="js/bundle.js"></script>
 </body>
 
