--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
 	<form id="add-row">
 		<button>Add Row</button>
 	</form>
+	<form id="add-column">
+		<button>Add Column</button>
+	</form>
 
 	<script src="js/bundle.js"></script>
 </body>
