generate test for add row & column

--- a/client/js/test/fixtures/sheet-container.html
+++ b/client/js/test/fixtures/sheet-container.html
@@ -13,3 +13,9 @@
 		</tbody>
 	</table>
 </div>
+<form id="add-row">
+	<button>Add Row</button>
+</form>
+<form id="add-column">
+	<button>Add Column</button>
+</form>
